completed front-end

--- a/less/agency.less
+++ b/less/agency.less
@@ -271,8 +271,9 @@ section {
         .portfolio-link {
             display: block;
             position: relative;
-            max-width: 400px;
+            max-width: 300px;
             margin: 0 auto;
+            height: 20vh;
 
             .portfolio-hover {
                 background: fade(@theme-primary, 90%);
@@ -311,7 +312,7 @@ section {
         }
 
         .portfolio-caption {
-            max-width: 400px;
+            max-width: 300px;
             margin: 0 auto;
             background-color: white;
             text-align: center;
@@ -341,6 +342,10 @@ section {
             margin: 0 0 30px;
         }
     }
+}
+.portfolio-img {
+    height: 100%;
+    width: 100%;
 }
 // Timeline
 .timeline {
