--- a/css/agency.css
+++ b/css/agency.css
@@ -313,8 +313,9 @@ section h3.section-subheading {
 #portfolio .portfolio-item .portfolio-link {
   display: block;
   position: relative;
-  max-width: 400px;
+  max-width: 300px;
   margin: 0 auto;
+  height: 20vh;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
   background: rgba(254, 209, 54, 0.9);
@@ -347,7 +348,7 @@ section h3.section-subheading {
   margin: 0;
 }
 #portfolio .portfolio-item .portfolio-caption {
-  max-width: 400px;
+  max-width: 300px;
   margin: 0 auto;
   background-color: white;
   text-align: center;
@@ -370,6 +371,10 @@ section h3.section-subheading {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
   }
+}
+.portfolio-img {
+  height: 100%;
+  width: 100%;
 }
 .timeline {
   list-style: none;
