trying to update published

--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -235,7 +235,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/city.jpg');
+  background-image: url('../img/x_f5fcc376.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
